Update and rename Startseite.html to https:/42182jio4.github.io/Stundenplan/ Startseite.html

--- a/https:/42182jio4.github.io/Stundenplan/ Startseite.html
+++ b/https:/42182jio4.github.io/Stundenplan/ Startseite.html
@@ -17,13 +17,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="file:///C:/Users/kunde/Desktop/Stundeplan%20f%C3%BCr%20Mama/Startseite.html">Startseite</a>
+                        <a href="#">Startseite</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/kunde/Desktop/Stundeplan%20f%C3%BCr%20Mama/Stundenplan.html">Stundenplan</a>
+                        <a href="#">Stundenplan</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/kunde/Desktop/Stundeplan%20f%C3%BCr%20Mama/Klausuren.html">Klausuren</a>
+                        <a href="#">Klausuren</a>
                     </li>
                     <li>
                         <a href="">Lehrer</a>
