--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#">Stundenplan</a>
                     </li>
                     <li>
-                        <a href="#">Klausuren</a>
+                        <a href="https://42182jio4.github.io/klausuren/">Klausuren</a>
                     </li>
                     <li>
                         <a href="">Lehrer</a>
