--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Startseite</a>
+                        <a href="https://42182jio4.github.io/Stundenplan/">Startseite</a>
                     </li>
                     <li>
                         <a href="#">Stundenplan</a>
